# AndroidExample

./: .gitignore  README.md  local.properties  settings.gradle
BreakpadExample/: build.gradle
BreakpadExample/src/androidTest/java/com/windy/breakpadexample/: ExampleInstrumentedTest.java
BreakpadExample/src/main/: AndroidManifest.xml
BreakpadExample/src/main/cpp/: CMakeLists.txt  app_main.cpp
BreakpadExample/src/main/cpp/breakpad/: CMakeLists.txt
BreakpadExample/src/main/java/com/windy/breakpadexample/: AnrActivity.java  BaseActivity.kt  GameActivity.java  MainActivity.java
BreakpadExample/src/main/res/layout/: anr_activity.xml  main_activity.xml
BreakpadExample/src/main/res/values/: strings.xml
BreakpadExample/src/test/java/com/windy/breakpadexample/: ExampleUnitTest.java  LinkedNodeUnitTest.java  MyHashSet.java  ReferenceAndValue.java
distribution/gperf/include/: gperf.h
gradle/wrapper/: gradle-wrapper.properties
jni-libs/: build.gradle
jni-libs/src/androidTest/java/com/windy/jni_libs/: ExampleInstrumentedTest.kt
jni-libs/src/main/: AndroidManifest.xml
jni-libs/src/main/cpp/: CMakeLists.txt
jni-libs/src/main/cpp/gmath/: CMakeLists.txt
jni-libs/src/main/cpp/gmath/src/: gmath.c  gmath.h
jni-libs/src/main/cpp/gperf/: CMakeLists.txt
jni-libs/src/main/cpp/gperf/src/: gperf.c
jni-libs/src/test/java/com/windy/jni_libs/: ExampleUnitTest.kt
libarLive/: build.gradle
libarLive/src/androidTest/java/com/windy/libarlive/: ExampleInstrumentedTest.kt
libarLive/src/main/: AndroidManifest.xml
libarLive/src/main/cpp/: AudioChannel.cpp  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  CommonInclude.cpp  CommonInclude.h  JavaCallHelper.h  MaNiuPlayer.cpp  app_main.cpp  message_queue.cpp  message_queue.h  native-lib.cpp
libarLive/src/main/java/com/windy/libarlive/: LibarLivePlayer.kt  MainActivity.kt  PlayerActivity.kt
libarLive/src/main/res/values/: themes.xml
libarLive/src/main/res/values-night/: themes.xml
libarLive/src/test/java/com/windy/libarlive/: ExampleUnitTest.kt
libraLive/: build.gradle
libraLive/src/androidTest/java/com/windy/libralive/: ExampleInstrumentedTest.kt
libraLive/src/main/: AndroidManifest.xml
libraLive/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  CommonInclude.cpp  CommonInclude.h  JavaCallHelper.cpp  JavaCallHelper.h  MaNiuPlayer.cpp  MaNiuPlayer.h  NiubiPlayer.cpp  NiubiPlayer.h  VideoChannel.cpp  VideoChannel.h  app_liveplayer.cpp  app_main.cpp  native-lib.cpp
libraLive/src/main/cpp/common/: CommonInclude.h  Logger.h  TimeExt.h  message_queue.h
libraLive/src/main/cpp/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  OffscreenSurface.cpp  OffscreenSurface.h  WindowSurface.cpp  WindowSurface.h
libraLive/src/main/cpp/ffmpeg/examples/: decode_video.c  qsvdec.c  resampling_audio.c
libraLive/src/main/cpp/looper/: Looper.cpp  Looper.h
libraLive/src/main/cpp/platform/: JavaCallHelper.cpp  JavaCallHelper.h
libraLive/src/main/cpp/player/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  NiubiPlayer.cpp  NiubiPlayer.h  VideoChannel.cpp  VideoChannel.h
libraLive/src/main/cpp/player/filter/: AudioFilter.cpp  AudioFilter.h  Filter.h  ScaleFilter.cpp  ScaleFilter.h
libraLive/src/main/cpp/player/render/: BaseGLRender.h  NativeRender.cpp  NativeRender.h  OpenGLRender.cpp  OpenGLRender.h  VideoGLRender.cpp  VideoGLRender.h  VideoRender.cpp  VideoRender.h
libraLive/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  ImageDef.h  Utils.cpp  Utils.h
libraLive/src/main/java/com/windy/libralive/: LibarLivePlayer.kt  LibraLivePlayer.kt  MainActivity.kt  PlayerActivity.kt
libraLive/src/main/res/drawable/: ic_black_message_24dp.xml  meta_main_item_cover.xml
libraLive/src/main/res/drawable-v24/: window_dialog_left_white_bg.xml  window_dialog_parent_bg.xml  window_dialog_right_red_bg.xml
libraLive/src/main/res/layout/: activity_camera.xml  activity_first.xml  activity_main.xml  activity_media_codec.xml  activity_player.xml  activity_sec.xml  activity_second.xml  fragment_home.xml  fragment_me.xml  fragment_msg.xml  fragment_shop.xml  item_home_list.xml  item_home_one.xml  item_home_two.xml  item_msg_list.xml  net_work_dialog.xml  window_dialog_base.xml
libraLive/src/main/res/menu/: bottom_nav_menu.xml
libraLive/src/main/res/navigation/: home_navigation.xml
libraLive/src/main/res/raw/: frag_flag.glsl  vert_flag.glsl
libraLive/src/main/res/values/: colors.xml  dimens.xml  strings.xml
libraLive/src/main/res/values-night/: colors.xml
libraLive/src/test/java/com/windy/libralive/: ExampleUnitTest.kt
okhttp-java/: build.gradle
okhttp-java/src/main/java/okhttp3/: Cache.java  CertificatePinner.java  Dispatcher.java  EventListener.java  Headers.java  HttpUrl.java  OkHttpClient.java  Response.java  ResponseBody.java  Route.java  WebSocket.java
okhttp-java/src/main/java/okhttp3/internal/: Util.java
okhttp-java/src/main/java/okhttp3/internal/cache/: DiskLruCache.java
okhttp-java/src/main/java/okhttp3/internal/connection/: ConnectInterceptor.java  Exchange.java  ExchangeFinder.java  RealConnection.java  RealConnectionPool.java  Transmitter.java
okhttp-java/src/main/java/okhttp3/internal/http/: CallServerInterceptor.java  HttpHeaders.java  RealInterceptorChain.java  (+2 more)
okhttp3-java/: build.gradle
okhttp3-java/src/androidTest/java/com/okhttp3/: ExampleInstrumentedTest.java
okhttp3-java/src/main/: AndroidManifest.xml
okhttp3-java/src/main/java/okhttp3/: Address.java  Authenticator.java  Cache.java  CacheControl.java  CertificatePinner.java  Connection.java  ConnectionSpec.java  Dispatcher.java  EventListener.java  FormBody.java  Handshake.java  Headers.java  HttpUrl.java  Interceptor.java  MediaType.java  MultipartBody.java  OkHttpClient.java  RealCall.java  Request.java  RequestBody.java  Response.java  ResponseBody.java  Route.java  WebSocket.java
okhttp3-java/src/main/java/okhttp3/internal/: Util.java  Version.java
okhttp3-java/src/main/java/okhttp3/logging/: HttpLoggingInterceptor.java
okhttp3-java/src/test/java/com/okhttp3/: ExampleUnitTest.java
(+141 files in other folders)
